Shows peer ID in Sync Tab, fixes overflow for custom tabs

--- a/src/css/devtools/tabs/data.css
+++ b/src/css/devtools/tabs/data.css
@@ -1,4 +1,7 @@
 /* ===== DATA TAB ===== */
+#eruda-Data, #eruda-AI {
+  overflow: auto !important;
+}
 #eruda-Data > div {
   padding: 1rem;
 }
